--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,11 @@ body {
 .sidebar-scrollbar::-webkit-scrollbar-thumb:hover {
   background: #6b7280;
 }
+
+/* Resizable Sidebar */
+.resize-handle {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
